--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -4,7 +4,7 @@
     display: flex;
     #sidebar{
         background-color: #FFFFFF;
-        width: 200px;
+        width: 150px;
         z-index: 500;
         box-shadow: 0 0 8px  rgba(0,0,0,0.2);
         #top{
@@ -43,7 +43,7 @@
         }
     }
     #body{
-        width: 100%;
+        width: calc(100% - 150px);
    
         display: flex;
         flex-direction: column;
