--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -4,20 +4,22 @@
     #title{
         // border: solid red 2px;
         text-align: left;
-        // max-width: 1400px;
-        padding-left: 30px;
+        color: rgb(114, 114, 114);
+        padding-left: 60px;
         margin: 0 auto;
         font-size: calc(16px + 1.2vw);
         font-weight: 700;
     }
     #top{
         // border: solid red 2px;
+        margin: 0px auto;
+        width: 90%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         #popular-closets{
         flex-grow: 1;
-
+        
         height: 450px;
         display: grid;
         grid-template-columns: 2fr 1fr 1.5fr 0;
@@ -227,6 +229,90 @@
             // mar
             #button{
                 // border: solid blue 2px;
+            }
+        }
+    }
+    #recommended{
+        // border: solid red 2px;
+        width: 90%;
+        margin: 0px auto;
+        #closet{
+            // border: solid red 5px;
+            #text{
+                border-top-left-radius: 15px;
+                border-top-right-radius: 15px;
+                background-color: rgba(0, 0, 0, 0.05);
+                width: 400px;
+                text-align: left;
+                padding: 3px 0px;
+                #name{
+                    // border: solid red 5px;
+                    padding-left: 10px;
+                    display: flex;
+                    font-size: 25px;
+                    color: rgb(65, 64, 64);
+                    font-weight: 600;
+                    #user{
+                        padding-left: 10px;
+                        font-weight: 400;
+                    }
+                    #closet{
+          
+                        background-color: rgb(249, 252, 252);
+                        margin-left: 10px;
+                        height: 30px;
+                        width: 30px;
+                        margin: auto 0px auto 15px;
+                        font-family: "Baloo 2";
+                        box-shadow: 0 0 5px  rgba(0, 0, 0, 0.4);
+
+                    }
+                }
+               
+            }
+            #display-case{
+                padding: 5px 10px;
+                border-radius: 5px;
+                box-shadow: 0 0 5px  rgba(0, 0, 0, 0.4);
+                display: flex;
+                justify-content: flex-start;
+                overflow-x: scroll;
+                margin-bottom: 10px;
+                #product{
+                    border-radius: 35px;
+                    // border: solid 2px black;
+                    box-shadow: 0 0 5px  rgba(0, 0, 0, 0.4);
+                    margin: 5px 15px 0px 15px;
+                    cursor: pointer;
+
+                    #image{
+                        border-radius: 35px;
+                        height: 200px;
+                        width: 200px;
+                        object-fit: contain;
+                        background-color: white;
+                        padding: 5px;
+                    }
+                   
+                }
+                &::-webkit-scrollbar {
+                    width: 8px;
+                    height: 14px;
+                  }
+                    &::-webkit-scrollbar-thumb {
+                      height: 6px;
+                      border: 4px solid rgba(0, 0, 0, 0);
+                      background-clip: padding-box;
+                      background-color: rgba(0, 0, 0, 0.15);
+                  }
+                  &::-webkit-scrollbar-button {
+                      width: 0;
+                      height: 0;
+                      display: none;
+                  }
+                  &::-webkit-scrollbar-corner {
+                      background-color: transparent;
+                  }
             }
         }
     }
