all saved in progress

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@
 .App {
   text-align: center;
   height: 100vh;
-  background-color: #f5f3f3;
+  background-color: #F7F8F8;
   font-family: "Baloo 2";
 }
