--- a/src/components/ReusableContainer/SingleItemContainer.scss
+++ b/src/components/ReusableContainer/SingleItemContainer.scss
@@ -5,6 +5,7 @@
     margin: 5px 15px 0px 15px;
     cursor: pointer;
     position: relative;
+    width: 210px;
     
     #image{
         border-radius: 35px;
