--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -63,7 +63,7 @@
                 // border: solid red 2px;
                 margin-left: 25px;
                 overflow: auto;
-                padding: 5px 0px 5px 5px;
+                padding: 5px 10px 5px 5px;
                 #closet{
                     font-size:calc(12px + 0.5vw);
                     // border: solid red 2px;
@@ -192,7 +192,7 @@
         }
         
         #responsive-insert{
-            border: solid blue 2px;
+            // background-color: aqua;
             
             flex-grow: 1;
         
