--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,24 +1,23 @@
-#dashboard{
+#dashboard {
     // border: solid red 2px;
     height: 100%;
     display: flex;
-    #sidebar{
+    #sidebar {
         background-color: #FFFFFF;
         // border: solid red 2px;
         z-index: 500;
-        box-shadow: 0 0 8px  rgba(0,0,0,0.2);
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
         position: relative;
-        #top{
+        #top {
             height: 15vh;
             display: flex;
-            #logo{
+            #logo {
                 cursor: pointer;
                 margin: 0px auto;
                 user-select: none;
                 object-fit: contain;
             }
-            #collapse{
-               
+            #collapse {
                 position: fixed;
                 width: 30px;
                 height: 30px;
@@ -26,20 +25,19 @@
                 top: 150px;
             }
         }
-
-        #links{
+        #links {
             // border: solid red 2px;
             display: flex;
             flex-direction: column;
             text-align: center;
             margin: 10px 0px 0px 0px;
             padding: 2px;
-            font-size:calc(14px + 0.5vw);
+            font-size: calc(14px + 0.5vw);
             padding-left: 8px;
             // width: 100px;
             // max-height: 80%;
             // overflow: hidden;
-            #link{
+            #link {
                 // border: solid red 2px;
                 cursor: pointer;
                 z-index: 500;
@@ -50,34 +48,32 @@
                 font-weight: 500;
                 transition: color 0.1s;
                 user-select: none;
-                &:hover{
+                &:hover {
                     color: black;
                 }
-                &.highlight{
+                &.highlight {
                     color: black;
                     font-weight: 600;
                 }
             }
-            #closetList{
+            #closetList {
                 z-index: 400;
                 // border: solid red 2px;
                 margin-left: 25px;
                 overflow: auto;
                 padding: 5px 10px 5px 5px;
-                #closet{
-                    font-size:calc(12px + 0.5vw);
+                #closet {
+                    font-size: calc(12px + 0.5vw);
                     // border: solid red 2px;
                     color: rgba(80, 80, 80, 0.856);
-                    
                     cursor: pointer;
                     text-align: left;
                     transition: color 0.01s, padding 0.5s;
-                    &:hover{
+                    &:hover {
                         color: black;
                     }
-                    
                 }
-                #closet.highlight{
+                #closet.highlight {
                     // border: solid red 2px;
                     font-weight: 600;
                     border-top-left-radius: 5px;
@@ -87,51 +83,47 @@
                     border-bottom-left-radius: 5px;
                 }
             }
-            
         }
-        #bottom{
+        #bottom {
             bottom: 10px;
             // right: 10px;
             position: absolute;
-
             width: 100%;
             // border: solid red 2px;
-            #setting{
+            #setting {
                 border: solid rgba(70, 69, 69, 0.377) 2px;
-               
             }
         }
     }
-    #body{
+    #body {
         // border: solid red 2px;
         transition: width 2s;
         display: flex;
         flex-direction: column;
-
-        #header{
+        #header {
             // border: solid red 2px;
             padding: 10px 20px;
             margin-left: -150px;
             padding-left: 150px;
             background-color: #F7F8F8;
             z-index: 400;
-            transition: z-index 0.01s,  background-color 0.2s, box-shadow 0.2s;
-            &.shadow{
+            transition: z-index 0.01s, background-color 0.2s, box-shadow 0.2s;
+            &.shadow {
                 background-color: #FFFFFF;
                 // background-color: #f6f8f8;
                 // margin-left: 0px;
                 // padding-left: 0px;
                 // z-index: 500;
-                box-shadow: 0 4px 2px -2px rgba(0,0,0,0.2);
+                box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.05);
             }
-            #current-user{
+            #current-user {
                 // border: solid red 2px;
                 display: flex;
                 justify-content: space-between;
                 height: 90px;
                 position: relative;
                 align-items: stretch;
-                #expand{
+                #expand {
                     // border: solid rgb(151, 151, 151) 2px;
                     // background-color: #9c9c9c3f;
                     position: absolute;
@@ -140,25 +132,19 @@
                     margin-left: 10px;
                     height: 90px;
                     padding: 0px;
-                    
                     font-size: 30px;
-                    #icon{
+                    #icon {
                         color: #909493;
-                
                         margin: 0px;
                         width: 40px;
                     }
                 }
-
-                #notif{
+                #notif {
                     padding-left: 20px;
                     margin: auto;
                     // border: solid red 2px;
-                    
-                   
-                   
                 }
-                #searchbar{
+                #searchbar {
                     // border: solid red 2px;
                     margin: auto;
                     min-width: 200px;
@@ -166,11 +152,11 @@
                     // max-width: 1400px;
                     padding: 0px 10px;
                 }
-                #profile{
+                #profile {
                     // border: solid red 2px;
                     margin: auto;
                     display: flex;
-                    #username{
+                    #username {
                         // border: solid red 2px;
                         margin: auto;
                         max-width: 125px;
@@ -179,7 +165,7 @@
                         text-overflow: ellipsis;
                         padding-right: 10px;
                     }
-                    #propic{
+                    #propic {
                         height: 65px;
                         width: 65px;
                         object-fit: cover;
@@ -190,31 +176,27 @@
             // display: flex;
             // justify-content: space-around;
         }
-        
-        #responsive-insert{
+        #responsive-insert {
             // background-color: aqua;
-            
             flex-grow: 1;
-        
             &::-webkit-scrollbar {
                 width: 14px;
                 height: 18px;
-              }
-                &::-webkit-scrollbar-thumb {
-                  height: 6px;
-                  border: 4px solid rgba(0, 0, 0, 0);
-                  background-clip: padding-box;
-                  background-color: rgba(0, 0, 0, 0.15);
-              }
-              &::-webkit-scrollbar-button {
-                  width: 0;
-                  height: 0;
-                  display: none;
-              }
-              &::-webkit-scrollbar-corner {
-                  background-color: transparent;
-              }
+            }
+            &::-webkit-scrollbar-thumb {
+                height: 6px;
+                border: 4px solid rgba(0, 0, 0, 0);
+                background-clip: padding-box;
+                background-color: rgba(0, 0, 0, 0.15);
+            }
+            &::-webkit-scrollbar-button {
+                width: 0;
+                height: 0;
+                display: none;
+            }
+            &::-webkit-scrollbar-corner {
+                background-color: transparent;
+            }
         }
     }
-    
 }
