--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -26,14 +26,17 @@
             }
         }
         #links {
+            &.no-auth{
+                padding-left: 20px;
+            }
             // border: solid red 2px;
             display: flex;
             flex-direction: column;
             text-align: center;
             margin: 10px 0px 0px 0px;
             padding: 2px;
-            font-size: calc(14px + 0.5vw);
-            padding-left: 8px;
+            font-size: calc(12px + 0.5vw);
+            padding-left: 0px;
             // width: 100px;
             // max-height: 80%;
             // overflow: hidden;
@@ -159,6 +162,16 @@
                     // border: solid red 2px;
                     margin: auto;
                     display: flex;
+                    #login-signup{
+                        // border: solid red 2px;
+                        width: 120px;
+                        height: 40px;
+                        color:rgb(221, 220, 220);
+                        font-weight: 700;
+                        background-color: #7e7e7e;
+                        padding: 0px;
+                        font-family: "Baloo 2";
+                    }
                     #username {
                         // border: solid red 2px;
                         margin: auto;
