--- a/src/components/AllClosets/AllClosets.scss
+++ b/src/components/AllClosets/AllClosets.scss
@@ -3,7 +3,16 @@
     // height: 100%;
     width: 95%;
     margin: 0px auto;
-
+    #title{
+        text-align: left;
+        width: 100%;
+        // border: solid red 2px;
+        color: rgb(114, 114, 114);
+        padding-left: 25px;
+        margin: 0 auto;
+        font-size: calc(16px + 1.2vw);
+        font-weight: 700;
+    }
     #closet-container{
         padding: 10px;
         // border: solid red 2px;
@@ -13,6 +22,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(210px, max-content));
         #closet{
+            background-color: white;
             border-radius: 10px;
             box-shadow: 0 0 5px  rgba(0, 0, 0, 0.4);
             cursor: pointer;
@@ -34,7 +44,7 @@
                 font-weight: 600;
             }
             #img{
-                border: solid red 2px;
+                // border: solid red 2px;
                 width: 90px;
                 height: 90px;
                 object-fit: contain;
