--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -7,7 +7,7 @@
 
     #closet-header{
         
-        height: 200px;
+        height: 100px;
         width: 95%;
         margin: 0px auto;
     
@@ -19,10 +19,10 @@
         #text{
             // border: solid red 5px;
             height: 80%;
-            margin: auto 0px;
+            margin: auto auto;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: center;
             color: #ffffff;
             mix-blend-mode: luminosity;;
             z-index: 400;
@@ -63,7 +63,7 @@
 
     #item-container{
         padding: 10px;
-        // border: solid red 2px;
+        border: solid red 2px;
         margin: 0px 10px;
         overflow: hidden;
         grid-gap: 16px;
@@ -71,14 +71,14 @@
         grid-template-columns: repeat(auto-fit, minmax(210px, max-content));
 
         #product{
-            border-radius: 35px;
+            border-radius: 10px;
             box-shadow: 0 0 5px  rgba(0, 0, 0, 0.4);
             cursor: pointer;
             position: relative;
             width: 210px;
             height: 210px;
             #image{
-                border-radius: 35px;
+                border-radius: 10px;
                 height: 200px;
                 width: 200px;
                 object-fit: contain;
@@ -93,7 +93,7 @@
                 height: 200px;
                 width: 200px;
                 padding: 5px;
-                border-radius: 35px;
+                border-radius: 10px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
