--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -111,6 +111,13 @@
             }
         }
     }
+    #editForm{
+        border: solid red 2px;
+        margin: 0px 10px;
+        padding: 10px;
+        // position: absolute;
+        height: 500px;
+    }
 
 
 }
