--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -26,15 +26,12 @@
             }
         }
         #links {
-            &.no-auth{
-                padding-left: 20px;
-            }
             // border: solid red 2px;
             display: flex;
             flex-direction: column;
             text-align: center;
             margin: 10px 0px 0px 0px;
-            padding: 2px;
+            padding: 5px;
             font-size: calc(12px + 0.5vw);
             padding-left: 0px;
             // width: 100px;
@@ -44,9 +41,9 @@
                 // border: solid red 2px;
                 cursor: pointer;
                 z-index: 500;
-                padding-left: 10px;
+        
                 margin: 10px 0px 2px 5px;
-                text-align: left;
+                text-align: center;
                 color: rgba(80, 80, 80, 0.856);
                 font-weight: 500;
                 transition: color 0.1s;
@@ -61,8 +58,8 @@
             }
             #closetList {
                 z-index: 400;
-                // border: solid red 2px;
-                margin-left: 25px;
+                border: solid rgba(58, 58, 58, 0.226) 1px;
+                margin-left: 5px;
                 overflow: auto;
                 padding: 5px 10px 5px 5px;
                 #closet {
