--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -178,6 +178,17 @@
                         text-overflow: ellipsis;
                         padding-right: 10px;
                     }
+                    #temp-propic{
+                        height: 55px;
+                        width: 55px;
+                        background-color: #7e7e7e;
+                        font-size: 35px;
+                        border-radius: 100px;
+                        font-weight: 500;
+                        color: white;
+                        font-family: "Baloo 2";
+                        user-select: none;
+                    }
                     #propic {
                         height: 65px;
                         width: 65px;
