--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -48,9 +48,14 @@
         }
 
         #edit-form-button{
-            position: absolute;
-            right: 60px;
-            top: 20px;
+            // position: absolute;
+            // right: 60px;
+            // top: 20px;
+            border: solid rgb(90, 90, 90) 2px;
+            height: 50px;
+            width: 50px;
+            margin-top: 25px;
+            margin-right: 15px;
         }
 
 
