--- a/src/components/ItemPopup/ItemPopup.scss
+++ b/src/components/ItemPopup/ItemPopup.scss
@@ -6,12 +6,13 @@
     //     rgb(0, 0, 0),
     //     rgba(240, 107, 6, 0)
     //   );
+    // border: solid red 5px;
     
 
       
     width: 100%;
     height: calc(100vh - 110px);
-    position: fixed;
+    position: absolute;
     z-index: 1000;
 
     #itemContainer{
@@ -19,30 +20,97 @@
         background-color: #F7F8F8;
         box-shadow: 0 0 8px  rgba(0,0,0,0.2);
         border-radius: 10px;;
-        max-width: 800px;
+        max-width: 1300px;
         margin: 20px auto;
-        height: 80%;
+        // height: 80%;
         min-height: 375px;
-        max-height: 800px;
-        #carousel{
-            border: solid red 2px;
-            max-width: calc(350px + 25vw);
-            max-height: calc(300px + 15vh);
-            align-self: center;
-            #img{
+        max-height: calc(100vh - 150px);
+        display: flex;
+        flex-direction: column;
+        #top{
+            // border: solid red 2px;
+           display: flex;
+           justify-content: space-between;
+        }
+        #content{
+            display: flex;
+            #image-container{
                 // border: solid red 2px;
-                max-width: calc(250px + 25vw);
-                max-height: calc(250px + 15vh);
-                object-fit: contain;
+               
+                max-width: calc(350px + 25vw);
+                max-height: calc(300px + 15vh);
+                #carousel{
+              
+                    max-width: calc(350px + 25vw);
+                    max-height: calc(300px + 15vh);
+                    align-self: center;
+                    #img{
+                        // border: solid red 2px;
+                        max-width: calc(250px + 25vw);
+                        max-height: calc(250px + 15vh);
+                        object-fit: contain;
+                    }
+                }
+                #carousel-single{
+        
+                    max-width: 95%;
+                    max-height: 500px;
+                    align-self: center;
+                 
+                }
+            }
+            #content-container{
+                // border: solid red 2px;
+                flex-grow: 1;
+                font-size: 14px;
+                font-weight: 600;
+                display: flex;
+                flex-direction: column;
+                #webscrape{
+                    text-align: left;
+                    padding: 0px 10px;
+                }
+                #feedback{
+                    // border: solid red 2px;
+                    flex-grow: 1;
+                    display: flex;
+                    flex-direction: column;
+                  
+                        #friend-container{
+                            width: 450px;
+                            // border: solid red 2px;
+                            display: flex;
+                            overflow-y: hidden;
+                            // flex-direction:
+                            overflow-x: scroll;
+                            #friend{
+                                // text-align:center;
+                                // border: solid red 2px;
+                                margin: 0px 3px;
+                                #friendicon{
+                                    background-color: rgba(128, 128, 128, 0.185);
+                                    margin: 0px auto;
+                                    width: 80px;
+                                    height: 80px;
+                                    border-radius: 100px;
+                                    // border: solid red 2px;
+                                    text-align: center;
+                                    vertical-align: middle;
+                                    line-height: 80px; 
+                                }
+                                #send{
+                                    // width: 80px;
+                                    // border: solid rgba(116, 116, 116, 0.425) 2px;
+                                    font-family: "Baloo 2";
+                                }
+                            }
+                        
+                    }
+                   
+                }
             }
         }
-        #carousel-single{
-            border: solid red 2px;
-            max-width: 95%;
-            max-height: 500px;
-            align-self: center;
-         
-        }
+        
     }
 
 }
