--- a/src/components/AllProducts/AllProducts.scss
+++ b/src/components/AllProducts/AllProducts.scss
@@ -60,6 +60,8 @@
                         #product-name {
                             color: rgb(114, 114, 114);
                             font-size: 10pt;
+                            line-height: 1em;
+                            float: left;
                         }
                     }
                     #price {
