--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -12,16 +12,21 @@
         margin-left: auto;
         margin-right: auto;
         max-width: calc(300px + 25vw);
+        #logo {
+            height: auto;
+            width: 40px;
+            margin-left: 25px;
+        }
         #carousel {
             // border: solid red 2px;
             max-width: 100%;
-            max-height: 350px;
+            max-height: 300px;
             align-self: center;
             position: relative;
             #img {
                 // border: solid red 2px;
                 max-width: 100%;
-                max-height: 350px;
+                max-height: 300px;
                 object-fit: contain;
             }
             #link-button {
@@ -55,6 +60,10 @@
                     max-width: 100%;
                     flex-flow: column wrap;
                 }
+            }
+            #link {
+                margin-top: auto;
+                margin-bottom: auto;
             }
             #form {
                 // border: solid red 2px;
