--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -23,16 +23,20 @@
             max-height: 300px;
             align-self: center;
             position: relative;
-            #img {
-                // border: solid red 2px;
-                max-width: 100%;
-                max-height: 300px;
-                object-fit: contain;
-            }
-            #link-button {
-                position: relative;
-                width: 50px;
-                height: 50px;
+            #sub-carousel {
+                display: flex;
+                flex-direction: row;
+                #img {
+                    // border: solid red 2px;
+                    max-width: 100%;
+                    max-height: 300px;
+                    object-fit: contain;
+                }
+                .MuiButtonBase-root {
+                    height: 50px;
+                    width: 20px;
+                    margin: auto;
+                }
             }
         }
         #carousel-single {
