--- a/src/components/ItemPopup/ItemPopup.scss
+++ b/src/components/ItemPopup/ItemPopup.scss
@@ -34,8 +34,17 @@
 }
 
 .friends-search {
-    border-radius: 50px;
+    border-radius: 10px !important;
+    width: 100%;
     height: 50px;
+}
+
+.contact-button {
+    border-radius: 10px !important;
+    width: 100%;
+    height: 50px;
+    padding: 12px !important;
+    text-transform: unset !important;
 }
 
 //#ItemPopup{
