--- a/src/components/ItemPopup/ItemPopup.scss
+++ b/src/components/ItemPopup/ItemPopup.scss
@@ -33,7 +33,7 @@
     bottom: unset !important;
 }
 
-.friends-search {
+.users-search {
     border-radius: 10px !important;
     width: 100%;
     height: 50px;
